--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
-#root {
-  margin-top: 100px;
+:root {
+  --background-color: #181818;
+  --primary-text-color: #e8e8e8;
+  --border-color: #333333;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-color: #f0f0f0;
+    --primary-text-color: #181818;
+    --border-color: #cccccc;
+  }
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
 }
