--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,8 +2,15 @@
     width: 300px;
 }
 
+.icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 15px;
+}
+
 .home-header {
     display: flex;
+    align-items: center;
     padding: 20px;
     box-shadow: 0 4px 12px var(--shadow-color);
 }
